--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h1>XM's Portfolio</h1>
         <h2>I'm a Web Developer</h2>
     <hr />
-        <h3><a href="public/movie-ranking.html">Movie Ranking Project</a></h3>
+        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/movie-rankingxm.png" alt="best movies review" style="height: 200px;">
-        <h3><a href="public/birthday-invite.html">Birthday Invite Project</a></h3>
+        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-invitexm.png" alt="birthday invite xm" style="height: 300px;">
     <hr />
         <a href="./public/about.html">About Me</a> 
